--- a/src/Backend/AspireToDo.Api/appsettings.json
+++ b/src/Backend/AspireToDo.Api/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "tables": "https://{account_name}.table.core.windows.net/",
-    "blobs": "https://{account_name}.blob.core.windows.net/"
+    "tables": "https://{account_name}.table.core.windows.net/"
   },
   "Logging": {
     "LogLevel": {
