--- a/src/Backend/AspireToDo.AppHost/appsettings.json
+++ b/src/Backend/AspireToDo.AppHost/appsettings.json
@@ -6,8 +6,10 @@
       "Aspire.Hosting.Dcp": "Warning"
     }
   },
+  "Parameters": {
+    
+  },
   "ConnectionStrings": {
-    "tables": "tables uri here",
-    "blobs": "blobs uri here"
+    "tables": "tables uri here"
   }
 }
