--- a/src/Backend/AspireToDo.Api/Properties/launchSettings.json
+++ b/src/Backend/AspireToDo.Api/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "scalar",
       "applicationUrl": "https://localhost:8001;http://localhost:8000",
       "environmentVariables": {
