--- a/src/UI/package.json
+++ b/src/UI/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.15",
-    "vue-router": "4.2.5",
+    "vue": "^3.5.22",
+    "vue-router": "4.6.3",
     "lodash": "4.17.21"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
-    "vite": "^5.0.12",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "vite": "^7.1.12",
     "run-script-os": "^1.1.6"
   }
 }
