--- a/src/Backend/AspireToDo.AppHost/AspireToDo.AppHost.csproj
+++ b/src/Backend/AspireToDo.AppHost/AspireToDo.AppHost.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
         <PackageReference Include="Aspire.Hosting.AppHost" Version="9.5.2" />
         <PackageReference Include="Aspire.Hosting.Azure.AppContainers" Version="9.5.2" />
+        <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.5.2" />
         <PackageReference Include="Aspire.Hosting.Azure.ContainerRegistry" Version="9.5.2-preview.1.25522.3" />
         <PackageReference Include="Aspire.Hosting.Azure.Redis" Version="9.5.2" />
         <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.5.2" />
